--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/thesheet.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<img src="Images/logo.PNG">
+
+<img alt="whoops" src="Images/logo.PNG">
 
 
 </body>
