--- a/diet.html
+++ b/diet.html
@@ -3,8 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/thesheet.css" type="text/css" rel="stylesheet"/>
+    <link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>
+
 </head>
-<body>
+<body class="bodycolor">
+<div style="height:1000px;background-color:#DE3F51" class="container">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Hand-Aid</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-itema">
+                    <a class="nav-link" href="diet.html">Diet</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercise.html">Exercise</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <table id="table4exercise" style="margin-top:80px;width:1000px;">
+        <tr>
+            <td>
+                diagnosis
+            </td>
+            <td>
+                anemia
+            </td>
+        </tr>
+        <tr>
+            <td>
+                recommended diet
+            </td>
+            <td>
+                high iron, lots of water
+            </td>
+        </tr>
+        <tr>
+            <td>
+                5/19/19
+            </td>
+            <td>
+                Lipids
+                Carbs
+                Protein
+            </td>
+        </tr>
+        <tr>
+            <td>
+                5/20/19
+            </td>
+            <td>
+                Protein
+                Carbs
+                Lipids
+            </td>
+        </tr>
+    </table>
+
+</div>
+
+
+
+
 
 </body>
 </html>
