--- a/exercise.html
+++ b/exercise.html
@@ -3,8 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/thesheet.css" type="text/css" rel="stylesheet"/>
+    <link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+<div style="height:50px;">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Hand-Aid</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="diet.html">Diet</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="exercise.html">Exercise</a>
+                </li>
+            </ul>
+
+
+        </div>
+    </nav>
+</div>
+    <div style="width:100%" class="row">
+<div  class="col-lg-3 exdiv">
+a
+</div>
+<div  class="col-lg-6 exdiv">
+a
+</div>
+<div style="border:1px solid red;" class="col-lg-3 exdiv">
+a
+</div>
+    </div>
 
 </body>
 </html>
