--- a/diet.html
+++ b/diet.html
@@ -8,7 +8,7 @@
 
 </head>
 <body class="bodycolor">
-<div style="height:1000px;background-color:#DE3F51" class="container">
+<div style="height:55px">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Hand-Aid</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,11 +16,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-itema">
-                    <a class="nav-link" href="diet.html">Diet</a>
+                    <a class="nav-link active" href="diet.html">Diet</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="exercise.html">Exercise</a>
@@ -29,32 +29,18 @@
 
         </div>
     </nav>
-
-    <table id="table4exercise" style="margin-top:80px;width:1000px;">
+</div>
+    <div style="background-color:#DE3F51" class="container">
+    <table id="table4exercise" style="width:100%;font-size:30px">
         <tr>
-            <td>
-                diagnosis
+            <td style="">
+                Date
             </td>
             <td>
-                anemia
-            </td>
-        </tr>
-        <tr>
-            <td>
-                recommended diet
+                Diet
             </td>
             <td>
-                high iron, lots of water
-            </td>
-        </tr>
-        <tr>
-            <td>
-                5/19/19
-            </td>
-            <td>
-                Lipids
-                Carbs
-                Protein
+                Reason
             </td>
         </tr>
         <tr>
@@ -62,11 +48,57 @@
                 5/20/19
             </td>
             <td>
-                Protein
-                Carbs
-                Lipids
+                <p>Breakfast: Spinach and kale smoothie</p>
+                <p>Lunch: Chicken sandwich</p>
+                <p>Dinner: salt</p>
+            </td>
+            <td>
+                Low blood pressure
             </td>
         </tr>
+        <tr>
+            <td>
+                5/21/19
+            </td>
+            <td>
+                <p>Breakfast: apple and whole grain cereal</p>
+                <p>Lunch: Salmon and Lentils</p>
+                <p>Dinner: Quinoa</p>
+            </td>
+            <td>
+                Gaining pounds
+            </td>
+        </tr>
+        <tr>
+            <td>
+                5/22/19
+            </td>
+            <td>
+                <p>Breakfast: Soylent</p>
+                <p>Lunch: Tomato soup</p>
+                <p>Dinner: Cucumber and watermelon</p>
+            </td>
+            <td>
+                High temperature
+            </td>
+        </tr>
+        <tr>
+            <td>
+                5/23/19
+            </td>
+            <td>
+                <p>Breakfast: pears and potato</p>
+                <p>Lunch: Flaxseed and oats</p>
+                <p>Dinner: yogurt and pasta with broccoli</p>
+            </td>
+            <td>
+                Constipation
+            </td>
+        </tr>
+
+
+
+
     </table>
 
 </div>
