--- a/exercise.html
+++ b/exercise.html
@@ -6,8 +6,8 @@
     <link href="css/thesheet.css" type="text/css" rel="stylesheet"/>
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet"/>
 </head>
-<body>
-<div style="height:50px;">
+<body class="bodycolor">
+<div style="height:55px;">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Hand-Aid</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="diet.html">Diet</a>
+                    <a class="nav-link" href="diet.html">Diet</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="exercise.html">Exercise</a>
+                    <a class="nav-link active" href="exercise.html">Exercise</a>
                 </li>
             </ul>
 
@@ -30,17 +30,76 @@
         </div>
     </nav>
 </div>
-    <div style="width:100%" class="row">
-<div  class="col-lg-3 exdiv">
-a
-</div>
-<div  class="col-lg-6 exdiv">
-a
-</div>
-<div style="border:1px solid red;" class="col-lg-3 exdiv">
-a
-</div>
-    </div>
+<div style="background-color:#DE3F51" class="container">
+<table id="table4exercise" style="width:100%;font-size:30px">
+    <tr>
+        <td>
+            Date
+        </td>
+        <td>
+            Suggested Routines
+        </td>
+        <td>
+            Reason
+        </td>
+    </tr>
+    <tr>
+        <td>
+            5/20/19
+        </td>
+        <td>
+            <p>Running</p>
+            <p>Biking</p>
+            <p>Push-ups</p>
+        </td>
+        <td>
+            Low blood pressure
+        </td>
+    </tr>
+    <tr>
+        <td>
+            5/21/19
+        </td>
+        <td>
+            <p>Yoga</p>
+            <p>Weight training</p>
+            <p>Aerobic Exercise</p>
+        </td>
+        <td>
+            Gaining pounds
+        </td>
+    </tr>
+    <tr>
+        <td>
+            5/22/19
+        </td>
+        <td>
+            <p>Abdominal Stretches</p>
+            <p>Arm Stretches</p>
+            <p>Leg Stretches</p>
+        </td>
+        <td>
+            High temperature
+        </td>
+    </tr>
+    <tr>
+        <td>
+            5/23/19
+        </td>
+        <td>
+            <p>Jogging</p>
+            <p>Swimming</p>
+            <p>Dancing</p>
+        </td>
+        <td>
+            Constipation
+        </td>
+    </tr>
 
+
+
+
+</table>
+</div>
 </body>
 </html>
