--- a/diet.html
+++ b/diet.html
@@ -10,7 +10,7 @@
 <body class="bodycolor">
 <div style="height:55px">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Hand-Aid</a>
+        <a class="navbar-brand" href="signin.html">Hand-Aid</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,6 +24,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="exercise.html">Exercise</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="diag.html">Diagnostics</a>
                 </li>
             </ul>
 
