--- a/diag.html
+++ b/diag.html
@@ -16,7 +16,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-itema">
@@ -24,6 +24,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="exercise.html">Exercise</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="diag.html">Diagnostics</a>
                 </li>
             </ul>
 
