--- a/diag.html
+++ b/diag.html
@@ -10,7 +10,7 @@
 <body class="bodycolor">
 <div style="height:1000px;background-color:#DE3F51" class="container">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Hand-Aid</a>
+        <a class="navbar-brand" href="signin.html">Hand-Aid</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <table id="table4exercise" style="margin-top:80px;width:1000px;">
+    <table id="table4exercise" style="margin-top:80px;width:1000px;font-size:30px">
         <tr>
             <td>
                 <p>height</p>
