--- a/diet.html
+++ b/diet.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 </div>
-    <div style="background-color:#DE3F51" class="container">
+    <div style="background-color:#DE3F51;" class="container">
     <table id="table4exercise" style="width:100%;font-size:30px">
         <tr>
             <td style="">
